--- a/src/Ambev.DeveloperEvaluation.Application/Ambev.DeveloperEvaluation.Application.csproj
+++ b/src/Ambev.DeveloperEvaluation.Application/Ambev.DeveloperEvaluation.Application.csproj
@@ -4,6 +4,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Products\GetListProduct\GetListCategoriesCommand.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Ambev.DeveloperEvaluation.Domain\Ambev.DeveloperEvaluation.Domain.csproj" />
