Produtos por categoriasCategorias

--- a/src/Ambev.DeveloperEvaluation.Application/Ambev.DeveloperEvaluation.Application.csproj
+++ b/src/Ambev.DeveloperEvaluation.Application/Ambev.DeveloperEvaluation.Application.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Products\GetListCategories\GetListCategoriesValidator.cs" />
     <Compile Remove="Products\GetListProduct\GetListCategoriesCommand.cs" />
   </ItemGroup>
 
